@@ -8,3 +8,4 @@ added console bell alert when AI finishes generating
 removed useless dependencies
 added text wrapping
 added ability to save custom prompts
+added color support on windows via colorama
